Overflow bug fix

--- a/scss/blocks/videos.scss
+++ b/scss/blocks/videos.scss
@@ -57,6 +57,7 @@
 
   &__container {
     display: flex;
+    overflow-x: hidden;
   }
 
   &__item {
